--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-   background-image: url(images/homeheader.png);
+   background-image: url(images/greengrocerieshead.png);
    background-repeat: no-repeat;
    height: 100vh;
    margin: 0;
