--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-   background-image: url(images/greengrocerieshead.png);
+   background-image: url(images/homeheader.svg);
    background-repeat: no-repeat;
    height: 100vh;
    margin: 0;
@@ -50,6 +50,7 @@ header nav ul li a {
 nav.center ul {
     list-style: none;
     padding: 0;
+    margin-bottom: 5em;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -58,7 +59,7 @@ nav.center ul {
 
 nav.center ul li {
     width: 10em;
-    margin: 2em 0;
+    margin: 1em 0;
     border-radius: 4em;
     background-color: #987554;
     padding: 1em;
@@ -68,6 +69,27 @@ nav.center ul li a {
     text-decoration: none;
     color: white;
     display: inline-block;
+}
+
+nav.bottom-navigation {
+    background-color: #d2b48c;
+    padding: 1em;
+}
+
+nav.bottom-navigation ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav.bottom-navigation ul li {
+    display: inline;
+    margin-right: 1em;
+    margin-left: 1em;
+}
+
+nav.bottom-navigation ul li img {
+    width: 3em;
+    height: 3em;
 }
 
 .delicious-list {
