--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,11 +9,19 @@ body {
 }
 
 header {
-   background-image: url(images/realhomeheader.svg);
+   background-image: url(images/greenheaderfr.svg);
    background-repeat: no-repeat;
    height: 60vh;
    margin: 0;
    padding: 0;
+}
+
+header img {
+    width: 45px;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    margin-top: 1em;
 }
 
 footer {
@@ -21,7 +29,7 @@ footer {
     background-color: #987554;
     padding: 0.5em;
     margin-top: auto; /* pushes footer to bottom */
-    margin-bottom: 116px;
+    margin-bottom: 84px;
 }
 
 h2 {
@@ -79,6 +87,8 @@ nav.bottom-navigation {
     overflow: hidden;
     position: fixed;
     bottom: 0;
+    margin: 0;
+    padding: 0;
     width: 100%;
 }
 
@@ -90,7 +100,7 @@ nav.bottom-navigation ul {
 nav.bottom-navigation ul li {
     display: inline;
     margin-right: 1em;
-    margin-left: 1em;
+    margin-left: 1.5em;
 }
 
 nav.bottom-navigation ul li img {
@@ -101,38 +111,48 @@ nav.bottom-navigation ul li img {
 .delicious-list {
     list-style: none;
     padding: 0;
+    margin-top: 5em;
+    margin-bottom: 5em;
 }
 
 .delicious-list li {
-    margin-bottom: 1em;
+    margin: 0 auto 1em;
     text-align: center;
+    padding: 1em;
+    background: #b99976;
+    border-radius: 15px;
+    max-width: 70%;
 }
 
 .delicious-list img {
     max-width: 50%;
+    border-radius: 1em;
 }
 
 .delicious-list p {
     text-align: center;
+    background: #e5d3b3;
+    border-radius: 0.5em;
 }
 
 .goodsimage {
     max-width: 30%;
     height: auto; /* images wont distort when resizing */
     padding: 0.3em;
+    border-radius: 1em;
 }
 
 .goodsimage-container {
     display: grid;
     text-align: center;
-    margin: 1.25em auto; /* automatically center horizontally*/
     max-width: 70%;
 }
 
 section {
     display: flex;
     flex-direction: column;
-    margin-bottom: 3em;
+    margin-top: 5em;
+    margin-bottom: 5em;
     margin-left: 1em;
     margin-right: 1em;
 }
@@ -142,7 +162,8 @@ section article:nth-child(odd) { /* alle oneven images this style */
     align-items: center;;
     flex-direction: row;
     border-radius: 1em;
-    background:#e5d3b3
+    margin-bottom: 0.5em;
+    background:#b99976
 }
 
 section article:nth-child(even) { /* alle even images this style */
@@ -150,6 +171,7 @@ section article:nth-child(even) { /* alle even images this style */
     align-items: center;
     flex-direction: row-reverse;
     border-radius: 1em;
+    margin-bottom: 0.5em;
     background: #d2b48c
 }
 
@@ -163,3 +185,15 @@ section article:nth-child(even) > p {
     margin-left: 1em;
 }
 
+.inline-image {
+    max-width: 50%;
+    float: left;
+    margin-right: 10px;
+    margin-top: 1em;
+}
+
+.inline-text {
+    margin-top: 5em;
+    padding: 0 2em;
+    margin-bottom: 5em;
+}
