--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,12 +8,29 @@ body {
     font-family: "Quattrocento", sans-serif;
 }
 
+main p {
+    padding: 1em;
+}
+
 header {
-   background-image: url(images/greenheaderfr.svg);
+   background-image: url(images/realheader.svg);
    background-repeat: no-repeat;
    height: 60vh;
    margin: 0;
    padding: 0;
+}
+
+header h1 {
+    text-align: center;
+    color: #e5d3b3;
+    margin-top: 1em;
+}
+
+header h2 {
+    text-align: center;
+    color: #e5d3b3;
+    margin-top: 3em;
+    font-size:medium
 }
 
 header img {
@@ -60,6 +77,7 @@ header nav ul li a {
 nav.center ul {
     list-style: none;
     padding: 0;
+    margin-top: 5em;
     margin-bottom: 5em;
     display: flex;
     flex-direction: column;
@@ -116,23 +134,27 @@ nav.bottom-navigation ul li img {
 }
 
 .delicious-list li {
-    margin: 0 auto 1em;
+    margin: 0 1em 2em;
     text-align: center;
     padding: 1em;
     background: #b99976;
     border-radius: 15px;
-    max-width: 70%;
+    max-width: 82%;
 }
 
 .delicious-list img {
     max-width: 70%;
     border-radius: 1em;
+    margin-top: 1em;
 }
 
 .delicious-list p {
     text-align: center;
     background: #e5d3b3;
     border-radius: 0.5em;
+    margin: 2em;
+    margin-top: 1em;
+    padding: 1em;
 }
 
 .goodsimage {
@@ -162,7 +184,7 @@ section article:nth-child(odd) { /* alle oneven images this style */
     align-items: center;;
     flex-direction: row;
     border-radius: 1em;
-    margin-bottom: 0.5em;
+    margin-bottom: 1em;
     background:#b99976
 }
 
@@ -171,18 +193,27 @@ section article:nth-child(even) { /* alle even images this style */
     align-items: center;
     flex-direction: row-reverse;
     border-radius: 1em;
-    margin-bottom: 0.5em;
+    margin-bottom: 1em;
     background: #d2b48c
 }
 
-section article:nth-child(odd) > p { /* margin for text */
-    margin-left: 1em;
+section article:nth-child(odd) > p { 
     margin-right: 1em;
+    margin-left: 0.5em;
+    flex: 1;
+    text-align:initial
 }
 
 section article:nth-child(even) > p {
-    margin-right: 1em;
-    margin-left: 1em;
+    margin-right: 0.5em;
+    flex: 1;
+    text-align:end
+}
+
+section article p {
+    padding: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .inline-image {
