--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,22 +54,6 @@ h2 {
     text-align: center;
 }
 
-header nav ul {
-    list-style: none;
-    display: flex;
-    padding: 0;
-    margin: 0;
-}
-
-header nav ul li {
-    margin-left: 20em;
-    margin-top: 1em;
-}
-
-header nav ul li a {
-    text-decoration: none;
-}
-
 .center {
     text-align: center;
     margin: 1em 1.5em;
@@ -98,6 +82,10 @@ nav.center ul li a {
     text-decoration: none;
     color: white;
     display: inline-block;
+}
+
+nav.center ul li:active {
+    transform: scale(0.5); /* Becomes 50% its original size when clicking */
 }
 
 nav.bottom-navigation {
